# Fabric_CICD

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  conftest.py  index.html  pyproject.toml  pytest.ini  requirements_visual_test.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  visual-tests.yml
fabric_ci_test/: __init__.py  cli.py
helper_functions/: file_reader.py  get_workspace_reports_datasets.py  log_utils.py  report_html.py  token_helpers.py
metadata/reports/: reports_datasets.json
report/: all_reports_results.json  index.html  playwright_report.html  report.html
tests/: test_pbi_visual_validation.py  test_preflight.py
tests/unit/: test_file_reader.py  test_report_html.py  test_token_helpers.py  test_workspace_metadata.py
